Fix layout problems after completing last css odin foundation lessons

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,8 @@
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
 body {
   margin: 0 0 0 0;
   background-color: hsl(0, 0%, 92%);
@@ -20,28 +25,19 @@ a:hover {
   color: #00b7ff;
   text-decoration: none;
 }
-article {
-  width: 60%;
-  margin: 0 auto;
-}
 article h1 {
   font-size: 4rem;
   font-family: Verdana, Tahoma, sans-serif;
 }
-article a {
-  font-weight: bold;
-}
+
 article p {
   font-family: Arial, Verdana, Tahoma, sans-serif;
-
   line-height: 1.5rem;
   letter-spacing: 0.5px;
-  margin-top: 10px;
 }
 #container {
   border-radius: 25px;
   margin: 25px 15% 50px 15%;
-  padding: 50px 0 75px 0;
   height: 100%;
   background-color: white;
   box-shadow: 0px 0px 30px rgb(0, 0, 0, 0.15);
@@ -49,39 +45,60 @@ article p {
 }
 .recipe h3 {
   color: #0c9ed8;
+  margin-top: 0px;
+  font-size: 2rem;
 }
-#recipe-catalog {
-  font-size: 1.5rem;
-  font-family: Garamond, "Times New Roman", serif;
+.recipe article {
+  width: 50%;
+  margin: 0 auto;
 }
-#recipe-catalog a {
+.recipe-c-container {
+  margin: 20px auto;
+  padding: 15px;
+  width: 70%;
+  text-align: center;
+}
+.recipe-item {
+  display: inline-block;
+  max-width: 250px;
+}
+.recipe-item a {
   font-size: 1.5rem;
+}
+.recipe-item a,
+.recipe-item p {
   font-family: Garamond, "Times New Roman", serif;
 }
 
 #recipe-catalog p {
-  font-size: 1.25rem;
-  width: 75%;
-  margin: 0 auto;
+  text-align: left;
+  margin-left: 10px;
 }
 #recipe-catalog h1 {
-  margin-bottom: 50px;
+  margin-top: 30px;
   text-align: center;
+  font-size: 3.5rem;
+  font-family: Garamond, "Times New Roman", serif;
 }
 .img-container {
-  position: relative;
-  margin: 40px auto;
   border-radius: 10px;
   height: 150px;
   overflow: hidden;
-  max-width: 75%;
+  margin: 0 10px;
 }
 .img-container img {
-  position: absolute;
   bottom: -100%;
-  left: 0px;
+  left: -100%;
+  width: 100%;
+}
+.recipe-img-container {
+  position: relative;
+  overflow: hidden;
+  height: 700px;
+  margin-bottom: 30px;
 }
 .recipe img {
+  position: absolute;
   margin: -100px auto 10px auto;
   width: 100%;
 }
